--- a/index.html
+++ b/index.html
@@ -389,6 +389,7 @@
                     <div class="dropdown">
                         <label>spawn channel</label>
                         <select id="spawn-channel-select">
+                            <option value="poketwo-information">poketwo-information</option>
                             <option value="spawns-1">spawns-1</option>
                             <option value="spawns-2">spawns-2</option>
                             <option value="spawns-3">spawns-3</option>
@@ -472,6 +473,7 @@
                     <div class="dropdown">
                         <label>channel</label>
                         <select id="message-channel-select">
+                            <option value="poketwo-information">poketwo-information</option>
                             <option value="spawns-1">spawns-1</option>
                             <option value="spawns-2">spawns-2</option>
                             <option value="spawns-3">spawns-3</option>
@@ -533,6 +535,7 @@
     <script>
         // webhook urls for spawn channels
         const webhooks = {
+            'poketwo-information': 'https://discord.com/api/webhooks/1463502096040198145/NKLuyKrhrCnAVbtGv4NDVtS55WfzGCRhxQfaUmP1n1O273Se0EtxN7NiEINvJXMXKKy1',
             'spawns-1': 'https://discord.com/api/webhooks/1458732887150170317/FY6pfqa0pbsMg4tbx9lhBSYbww05koPopYpbB08Szjy37pnza_mK7HAw4K8EAW_h97Cr',
             'spawns-2': 'https://discord.com/api/webhooks/1458732405035892832/-bvLKtLxmxEhZRJuvbYMkKXuI0JhL-DdFnzEGwd6no9w5iZvucSJrYyKsm-SL0mveXoz',
             'spawns-3': 'https://discord.com/api/webhooks/1458733207603380448/ynSpCAzhFC8oIRsoySmOWsvFTrAP_ONevGS5AVNoq8YlDt_dQkPGMoShUqELcEC0STi5'
